note on copyright

--- a/poetry.html
+++ b/poetry.html
@@ -1,291 +1,304 @@
 <html>
-	<head>
-		<title>Violet Sinnarkar</title>
-		<link rel = "stylesheet" type = "text/css" href = "css/main.css">
-		<!-- Global site tag (gtag.js) - Google Analytics -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141113114-1"></script>
-		<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag(){dataLayer.push(arguments);}
-			gtag('js', new Date());
-			gtag('config', 'UA-141113114-1');
-		</script>
-	</head>
-	<body>
-		<h1>Violet Sinnarkar</h1>
-		<nav>
-			<ul>
-				<li><a href="index.html" style="color: #8F5E99">Home</a></li>
-				<li><a href="cv_20251005.pdf" style="color: #8F5E99">CV</a></li>
-				<li><a href="poetry.html" style="color: #8F5E99">Poetry</a></li>
-				<li><a href="blog.html" style="color: #8F5E99">Blog</a></li>
-			</ul>
-		</nav>
 
-<p> Here is a selection of my favorite poems. Thanks to <a href = "https://www.poetryfoundation.org/">Poetry Foundation</a> and <a href = "https://thepoetryhour.com/about/">The Josephine Hart Poetry Foundation</a> for securing permission to reprint the works  which are still under copyright.</p>
+<head>
+	<title>Violet Sinnarkar</title>
+	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141113114-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+		gtag('config', 'UA-141113114-1');
+	</script>
+</head>
 
-		<blockquote>
-			Poetry is not only dream and vision; it is the skeleton architecture of our lives. It lays the foundations for a future of change, a bridge across our fears of what has never been before.
-		</blockquote>
-		<p style="text-align: right;">-Audre Lorde, <i>Sister Outsider: Essays & Speeches</i>, p. 38</p>
-		
-		<table id="poetryTable" style="width: 100%; border-collapse: collapse; margin-top: 20px;">
-			<thead>
-				<tr>
-					<th>Title</th>
-					<th>Author</th>
-					<th>Nationality</th>
-					<th>Era</th>
-					<th>Theme</th>
-				</tr>
-			</thead>
-			<tbody>
-				<tr>
-					<td><a href = "https://thepoetryhour.com/poems/funeral-blues/">Funeral Blues</a></td>
-					<td>W.H. Auden</td>
-					<td>British</td>
-					<td>Modernist</td>
-					<td>Love</td>
-				</tr>
-				<tr>
-					<td><a href = "https://www.poetryfoundation.org/poems/161869/the-more-loving-one-65a7f822258fd">The More Loving One</a></td>
-					<td>W.H. Auden</td>
-					<td>British</td>
-					<td>Modernist</td>
-					<td>Love</td>
-				</tr>
-				<tr>
-					<td><a href = "https://www.poetryfoundation.org/poems/151653/you-fit-into-me">[you fit into me]</a></td>
-					<td>Margaret Atwood</td>
-					<td>Canadian</td>
-					<td>Contemporary</td>
-					<td>Love</td>
-				</tr>
-				<tr>
-					<td><a href = "poetry/change-on-change.html" style="color: #8F5E99">Change on Change</a></td>
-					<td>Elizabeth Barrett Browning</td>
-					<td>British</td>
-					<td>Victorian</td>
-					<td>Love</td>
-				</tr>
-				<tr>
-					<td><a href = "poetry/how-do-i-love-thee.html" style="color: #8F5E99">How Do I Love Thee?</a></td>
-					<td>Elizabeth Barrett Browning</td>
-					<td>British</td>
-					<td>Victorian</td>
-					<td>Love</td>
-				</tr>
-				<tr>
-					<td>Epitaph to a Dog</td>
-					<td>Lord Byron</td>
-					<td>British</td>
-					<td>Romantic</td>
-					<td>Love</td>
-				</tr>
-				<tr>
-					<td>Women Don't Riot</td>
-					<td>Ana Castillo</td>
-					<td>American</td>
-					<td>Contemporary</td>
-					<td>Freedom</td>
-				</tr>
-				<tr>
-					<td>Late Fragment</td>
-					<td>Raymond Carver</td>
-					<td>American</td>
-					<td>Contemporary</td>
-					<td>Life</td>
-				</tr>
-				<tr>
-					<td>Differences of Opinion</td>
-					<td>Wendy Cope</td>
-					<td>British</td>
-					<td>Contemporary</td>
-					<td>Life</td>
-				</tr>
-				<tr>
-					<td>Death Be Not Proud</td>
-					<td>John Donne</td>
-					<td>British</td>
-					<td>Metaphysical</td>
-					<td>Time</td>
-				</tr>
-				<tr>
-					<td>No Man is an Island</td>
-					<td>John Donne</td>
-					<td>British</td>
-					<td>Metaphysical</td>
-					<td>Life</td>
-				</tr>
-				<tr>
-					<td>Desiderata</td>
-					<td>Max Ehrmann</td>
-					<td>American</td>
-					<td>Contemporary</td>
-					<td>Life</td>
-				</tr>
-				<tr>
-					<td>Half Life</td>
-					<td>Khalil Gibran</td>
-					<td>Lebanese</td>
-					<td>Modernist</td>
-					<td>Life</td>
-				</tr>
-				<tr>
-					<td>The New Colossus</td>
-					<td>Emma Lazarus</td>
-					<td>American</td>
-					<td>Late 19th Century</td>
-					<td>Freedom</td>
-				</tr>
-				<tr>
-					<td>To His Coy Mistress</td>
-					<td>Andrew Marvell</td>
-					<td>British</td>
-					<td>Metaphysical</td>
-					<td>Love</td>
-				</tr>
-				<tr>
-					<td>Mirror, Mirror</td>
-					<td>Spike Mulligan</td>
-					<td>British</td>
-					<td>Contemporary</td>
-					<td>Beauty</td>
-				</tr>
-				<tr>
-					<td>Don't Go Far Off</td>
-					<td>Pablo Neruda</td>
-					<td>Chilean</td>
-					<td>Contemporary</td>
-					<td>Love</td>
-				</tr>
-				<tr>
-					<td>Ode to Numbers</td>
-					<td>Pablo Neruda</td>
-					<td>Chilean</td>
-					<td>Contemporary</td>
-					<td>Life</td>
-				</tr>
-				<tr>
-					<td>The Uses of Sorrow</td>
-					<td>Mary Oliver</td>
-					<td>American</td>
-					<td>Contemporary</td>
-					<td>Love</td>
-				</tr>
-				<tr>
-					<td>Next Time</td>
-					<td>Mary Oliver</td>
-					<td>American</td>
-					<td>Contemporary</td>
-					<td>Love</td>
-				</tr>
-				<tr>
-					<td>The Lady's Reward</td>
-					<td>Dorothy Parker</td>
-					<td>American</td>
-					<td>Contemporary</td>
-					<td>Love</td>
-				</tr>
-				<tr>
-					<td>Somebody's Song</td>
-					<td>Dorothy Parker</td>
-					<td>American</td>
-					<td>Contemporary</td>
-					<td>Love</td>
-				</tr>
-				<tr>
-					<td>Purposely Ungrammatical Love Song</td>
-					<td>Dorothy Parker</td>
-					<td>American</td>
-					<td>Contemporary</td>
-					<td>Love</td>
-				</tr>
-				<tr>
-					<td>On Being a Woman</td>
-					<td>Dorothy Parker</td>
-					<td>American</td>
-					<td>Contemporary</td>
-					<td>Love</td>
-				</tr>
-				<tr>
-					<td>Midnight</td>
-					<td>Dorothy Parker</td>
-					<td>American</td>
-					<td>Contemporary</td>
-					<td>Time</td>
-				</tr>
-				<tr>
-					<td>Lullaby</td>
-					<td>Dorothy Parker</td>
-					<td>American</td>
-					<td>Contemporary</td>
-					<td>Love</td>
-				</tr>
-				<tr>
-					<td>Indian Summer</td>
-					<td>Dorothy Parker</td>
-					<td>American</td>
-					<td>Contemporary</td>
-					<td>Time</td>
-				</tr>
-				<tr>
-					<td>Autumn Valentine</td>
-					<td>Dorothy Parker</td>
-					<td>American</td>
-					<td>Contemporary</td>
-					<td>Love</td>
-				</tr>
-				<tr>
-					<td>Hymn to the Penates</td>
-					<td>Robert Southey</td>
-					<td>British</td>
-					<td>Romantic</td>
-					<td>Home</td>
-				</tr>
-				<tr>
-					<td>Ozymandius</td>
-					<td>Percy Bysshe Shelley</td>
-					<td>British</td>
-					<td>Romantic</td>
-					<td>Time</td>
-				</tr>
-				<tr>
-					<td>Suicide in the Trenches</td>
-					<td>Siegfried Sassoon</td>
-					<td>British</td>
-					<td>Modernist</td>
-					<td>Life</td>
-				</tr>
-				<tr>
-					<td>When You Are Old</td>
-					<td>William Butler Yeats</td>
-					<td>Irish</td>
-					<td>Modernist</td>
-					<td>Time</td>
-				</tr>
-			</tbody>
-		</table>
-		<footer>
-			<a href = "https://www.linkedin.com/in/vasinnarkar/" target="_blank">
-				<div class = "icon">
-					<object height = 25px width= 25px type="image/svg+xml" data="linkedin.svg">
-					</object>
-				</div>
-			</a>
-			<a href = "https://twitter.com/violetsinn" target="_blank">
-				<div class = "icon">
-					<object height = 25px width= 25px type="image/svg+xml" data="twitter.svg">
-					</object>
-				</div>
-			</a>
-			<a href = "https://github.com/violetsinn" target="_blank">
-				<div class = "icon">
-					<object height = 25px width= 25px type="image/svg+xml" data="github.svg">
-					</object>
-				</div>
-			</a>
-			<p ><small>© Violet Sinnarkar 2019 | <a style="color: #8F5E99" href="credits.html">Credits</a></small></p>
-		</footer>
-	</body>
+<body>
+	<h1>Violet Sinnarkar</h1>
+	<nav>
+		<ul>
+			<li><a href="index.html" style="color: #8F5E99">Home</a></li>
+			<li><a href="cv_20251005.pdf" style="color: #8F5E99">CV</a></li>
+			<li><a href="poetry.html" style="color: #8F5E99">Poetry</a></li>
+			<li><a href="blog.html" style="color: #8F5E99">Blog</a></li>
+		</ul>
+	</nav>
+
+	<p> Here is a selection of my favorite poems. Thanks to <a href="https://www.poetryfoundation.org/">Poetry
+			Foundation</a>, <a href="https://www.loc.gov/">The Library of Congress</a>, and <a
+			href="https://thepoetryhour.com/about/">The Josephine Hart Poetry Foundation</a> for securing permission to
+		reprint the works still under copyright.</p>
+
+	<blockquote>
+		Poetry is not only dream and vision; it is the skeleton architecture of our lives. It lays the foundations for a
+		future of change, a bridge across our fears of what has never been before.
+	</blockquote>
+	<p style="text-align: right;">-Audre Lorde, <i>Sister Outsider: Essays & Speeches</i>, p. 38</p>
+
+	<table id="poetryTable" style="width: 100%; border-collapse: collapse; margin-top: 20px;">
+		<thead>
+			<tr>
+				<th>Title</th>
+				<th>Author</th>
+				<th>Nationality</th>
+				<th>Era</th>
+				<th>Theme</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td><a href="https://thepoetryhour.com/poems/funeral-blues/">Funeral Blues</a></td>
+				<td>W.H. Auden</td>
+				<td>British</td>
+				<td>Modernist</td>
+				<td>Love</td>
+			</tr>
+			<tr>
+				<td><a href="https://www.poetryfoundation.org/poems/161869/the-more-loving-one-65a7f822258fd">The More
+						Loving One</a></td>
+				<td>W.H. Auden</td>
+				<td>British</td>
+				<td>Modernist</td>
+				<td>Love</td>
+			</tr>
+			<tr>
+				<td><a href="https://www.poetryfoundation.org/poems/151653/you-fit-into-me">[you fit into me]</a></td>
+				<td>Margaret Atwood</td>
+				<td>Canadian</td>
+				<td>Contemporary</td>
+				<td>Love</td>
+			</tr>
+			<tr>
+				<td><a href="poetry/change-on-change.html" style="color: #8F5E99">Change on Change</a></td>
+				<td>Elizabeth Barrett Browning</td>
+				<td>British</td>
+				<td>Victorian</td>
+				<td>Love</td>
+			</tr>
+			<tr>
+				<td><a href="poetry/how-do-i-love-thee.html" style="color: #8F5E99">How Do I Love Thee?</a></td>
+				<td>Elizabeth Barrett Browning</td>
+				<td>British</td>
+				<td>Victorian</td>
+				<td>Love</td>
+			</tr>
+			<tr>
+				<td><a href="poetry/epitaph-to-a-dog.html" style="color: #8F5E99">How Do I Love Thee?</a></td>
+				<td>Epitaph to a Dog</td>
+				<td>Lord Byron</td>
+				<td>British</td>
+				<td>Romantic</td>
+				<td>Love</td>
+			</tr>
+			<tr>
+				<td><a href="https://catdir.loc.gov/catdir/samples/random042/00061790.html">Women Don't Riot</a></td>
+				<td>Ana Castillo</td>
+				<td>American</td>
+				<td>Contemporary</td>
+				<td>Freedom</td>
+			</tr>
+			<tr>
+				<td>Late Fragment</td>
+				<td>Raymond Carver</td>
+				<td>American</td>
+				<td>Contemporary</td>
+				<td>Life</td>
+			</tr>
+			<tr>
+				<td>Differences of Opinion</td>
+				<td>Wendy Cope</td>
+				<td>British</td>
+				<td>Contemporary</td>
+				<td>Life</td>
+			</tr>
+			<tr>
+				<td>Death Be Not Proud</td>
+				<td>John Donne</td>
+				<td>British</td>
+				<td>Metaphysical</td>
+				<td>Time</td>
+			</tr>
+			<tr>
+				<td>No Man is an Island</td>
+				<td>John Donne</td>
+				<td>British</td>
+				<td>Metaphysical</td>
+				<td>Life</td>
+			</tr>
+			<tr>
+				<td>Desiderata</td>
+				<td>Max Ehrmann</td>
+				<td>American</td>
+				<td>Contemporary</td>
+				<td>Life</td>
+			</tr>
+			<tr>
+				<td>Half Life</td>
+				<td>Khalil Gibran</td>
+				<td>Lebanese</td>
+				<td>Modernist</td>
+				<td>Life</td>
+			</tr>
+			<tr>
+				<td>The New Colossus</td>
+				<td>Emma Lazarus</td>
+				<td>American</td>
+				<td>Late 19th Century</td>
+				<td>Freedom</td>
+			</tr>
+			<tr>
+				<td>To His Coy Mistress</td>
+				<td>Andrew Marvell</td>
+				<td>British</td>
+				<td>Metaphysical</td>
+				<td>Love</td>
+			</tr>
+			<tr>
+				<td>Mirror, Mirror</td>
+				<td>Spike Mulligan</td>
+				<td>British</td>
+				<td>Contemporary</td>
+				<td>Beauty</td>
+			</tr>
+			<tr>
+				<td>Don't Go Far Off</td>
+				<td>Pablo Neruda</td>
+				<td>Chilean</td>
+				<td>Contemporary</td>
+				<td>Love</td>
+			</tr>
+			<tr>
+				<td>Ode to Numbers</td>
+				<td>Pablo Neruda</td>
+				<td>Chilean</td>
+				<td>Contemporary</td>
+				<td>Life</td>
+			</tr>
+			<tr>
+				<td>The Uses of Sorrow</td>
+				<td>Mary Oliver</td>
+				<td>American</td>
+				<td>Contemporary</td>
+				<td>Love</td>
+			</tr>
+			<tr>
+				<td>Next Time</td>
+				<td>Mary Oliver</td>
+				<td>American</td>
+				<td>Contemporary</td>
+				<td>Love</td>
+			</tr>
+			<tr>
+				<td>The Lady's Reward</td>
+				<td>Dorothy Parker</td>
+				<td>American</td>
+				<td>Contemporary</td>
+				<td>Love</td>
+			</tr>
+			<tr>
+				<td>Somebody's Song</td>
+				<td>Dorothy Parker</td>
+				<td>American</td>
+				<td>Contemporary</td>
+				<td>Love</td>
+			</tr>
+			<tr>
+				<td>Purposely Ungrammatical Love Song</td>
+				<td>Dorothy Parker</td>
+				<td>American</td>
+				<td>Contemporary</td>
+				<td>Love</td>
+			</tr>
+			<tr>
+				<td>On Being a Woman</td>
+				<td>Dorothy Parker</td>
+				<td>American</td>
+				<td>Contemporary</td>
+				<td>Love</td>
+			</tr>
+			<tr>
+				<td>Midnight</td>
+				<td>Dorothy Parker</td>
+				<td>American</td>
+				<td>Contemporary</td>
+				<td>Time</td>
+			</tr>
+			<tr>
+				<td>Lullaby</td>
+				<td>Dorothy Parker</td>
+				<td>American</td>
+				<td>Contemporary</td>
+				<td>Love</td>
+			</tr>
+			<tr>
+				<td>Indian Summer</td>
+				<td>Dorothy Parker</td>
+				<td>American</td>
+				<td>Contemporary</td>
+				<td>Time</td>
+			</tr>
+			<tr>
+				<td>Autumn Valentine</td>
+				<td>Dorothy Parker</td>
+				<td>American</td>
+				<td>Contemporary</td>
+				<td>Love</td>
+			</tr>
+			<tr>
+				<td>Hymn to the Penates</td>
+				<td>Robert Southey</td>
+				<td>British</td>
+				<td>Romantic</td>
+				<td>Home</td>
+			</tr>
+			<tr>
+				<td>Ozymandius</td>
+				<td>Percy Bysshe Shelley</td>
+				<td>British</td>
+				<td>Romantic</td>
+				<td>Time</td>
+			</tr>
+			<tr>
+				<td>Suicide in the Trenches</td>
+				<td>Siegfried Sassoon</td>
+				<td>British</td>
+				<td>Modernist</td>
+				<td>Life</td>
+			</tr>
+			<tr>
+				<td>When You Are Old</td>
+				<td>William Butler Yeats</td>
+				<td>Irish</td>
+				<td>Modernist</td>
+				<td>Time</td>
+			</tr>
+		</tbody>
+	</table>
+
+	<p> Most of Auden's work will enter the public domain in 2044. Raymond Carver's <i>A New Path to the Waterfall</i>
+		will enter in 2059. If you would like to improve copyright law and policy in the United States, I would
+		recommending donating to the <a href="https://www.eff.org/">Electronic Frontier Foundation.</a> </p>
+	<footer>
+		<a href="https://www.linkedin.com/in/vasinnarkar/" target="_blank">
+			<div class="icon">
+				<object height=25px width=25px type="image/svg+xml" data="linkedin.svg">
+				</object>
+			</div>
+		</a>
+		<a href="https://twitter.com/violetsinn" target="_blank">
+			<div class="icon">
+				<object height=25px width=25px type="image/svg+xml" data="twitter.svg">
+				</object>
+			</div>
+		</a>
+		<a href="https://github.com/violetsinn" target="_blank">
+			<div class="icon">
+				<object height=25px width=25px type="image/svg+xml" data="github.svg">
+				</object>
+			</div>
+		</a>
+		<p><small>© Violet Sinnarkar 2019 | <a style="color: #8F5E99" href="credits.html">Credits</a></small></p>
+	</footer>
+</body>
+
 </html>
