fixing photo links

--- a/poetry/epitaph-to-a-dog.html
+++ b/poetry/epitaph-to-a-dog.html
@@ -60,10 +60,12 @@
 		<p> <b>Personal Notes</b>:</p>
         <p> May 2018: In memory of Cocoa </p>
 
-        <p><img class="poem_vert_image" src="photos/cocoa/cocoa-berkeley.jpeg"/>
-        <img class="poem_vert_image" src="photos/cocoa/cocoa-table.jpeg"/></p>
-        <p><img class="poem_hori_image" src="photos/cocoa/cocoa-brothers.JPG"/>
-        <img class="poem_hori_image" src="photos/cocoa/cocoa-thanksgiving.JPG"/></p>
+        <p><img class="poem_vert_image" src="../photos/cocoa/cocoa-berkeley.jpeg"/></p>
+        <p class = "image-caption">Cocoa in May 2016, when I was accepted to Berkeley.</p>
+        <p><img class="poem_hori_image" src="../photos/cocoa/cocoa-brothers.JPG"/>
+        <p class = "image-caption">Cocoa with his brother Spot.</p>
+        <img class="poem_hori_image" src="../photos/cocoa/cocoa-thanksgiving.JPG"/></p>
+        <p class = "image-caption">Cocoa on Thanksgiving 2017.</p>
 	</body>
 	<footer>
 		<a href="https://www.linkedin.com/in/vasinnarkar/" target="_blank">
