--- a/poetry/late-fragment.html
+++ b/poetry/late-fragment.html
@@ -28,7 +28,10 @@
 	<body>
 		<h2> Late Fragment </h2>
 		<h3> By Raymond Carver </h3>
-        <p><img class="poem_vert_image" src="photos/late-fragment.jpg"/>
+        <p><img class="poem_vert_image" src="../photos/late-fragment.jpg"/>
+
+        <p> <b>Personal Notes</b>:</p>
+        <p> May 2025: A photo by <a href = "https://www.linkedin.com/in/beckpictures">Erik Lee Beck</a>, taken at Carver's grave in Port Angeles, WA. </p>
 	</body>
 	<footer>
 		<a href="https://www.linkedin.com/in/vasinnarkar/" target="_blank">
