funny copyright note

--- a/poetry.html
+++ b/poetry.html
@@ -97,7 +97,7 @@
 				<td>Freedom</td>
 			</tr>
 			<tr>
-				<td>Late Fragment</td>
+				<td><a href="photos/epitaph-to-a-dog.html" style="color: #8F5E99">How Do I Love Thee?</a></td>
 				<td>Raymond Carver</td>
 				<td>American</td>
 				<td>Contemporary</td>
@@ -276,7 +276,11 @@
 
 	<p> Most of Auden's work will enter the public domain in 2044. Raymond Carver's <i>A New Path to the Waterfall</i>
 		will enter in 2059. If you would like to improve copyright law and policy in the United States, I would
-		recommending donating to the <a href="https://www.eff.org/">Electronic Frontier Foundation.</a> </p>
+		recommend donating to the <a href="https://www.eff.org/">Electronic Frontier Foundation.</a> Or, you can enjoy
+		the satirical poem <a
+			href="file:///Users/violetsinn/Downloads/SUM11-1166_Poem_The_Law_of_Copyright_2011-06-07_EN.pdf"><i>The Law
+				of Copyright</i></a> by Wendy Cope, distributed by The International Confederation of Societies of Authors
+		and Composers (CISAC) for free.</p>
 	<footer>
 		<a href="https://www.linkedin.com/in/vasinnarkar/" target="_blank">
 			<div class="icon">
