fixing poetry index

--- a/poetry.html
+++ b/poetry.html
@@ -83,7 +83,7 @@
 				<td>Love</td>
 			</tr>
 			<tr>
-				<td><a href="poetry/epitaph-to-a-dog.html" style="color: #8F5E99">How Do I Love Thee?</a></td>
+				<td><a href="poetry/epitaph-to-a-dog.html" style="color: #8F5E99">Epitaph to a Dog</a></td>
 				<td>Lord Byron</td>
 				<td>British</td>
 				<td>Romantic</td>
@@ -97,7 +97,7 @@
 				<td>Freedom</td>
 			</tr>
 			<tr>
-				<td><a href="photos/epitaph-to-a-dog.html" style="color: #8F5E99">How Do I Love Thee?</a></td>
+				<td><a href="photos/epitaph-to-a-dog.html" style="color: #8F5E99">Late Fragment</a></td>
 				<td>Raymond Carver</td>
 				<td>American</td>
 				<td>Contemporary</td>
