messing w image sizes

--- a/poetry.html
+++ b/poetry.html
@@ -97,7 +97,7 @@
 				<td>Freedom</td>
 			</tr>
 			<tr>
-				<td><a href="photos/epitaph-to-a-dog.html" style="color: #8F5E99">Late Fragment</a></td>
+				<td><a href="poetry/late-fragment.html" style="color: #8F5E99">Late Fragment</a></td>
 				<td>Raymond Carver</td>
 				<td>American</td>
 				<td>Contemporary</td>
