--- a/poetry.html
+++ b/poetry.html
@@ -3,13 +3,14 @@
 <head>
 	<title>Violet Sinnarkar</title>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-141113114-1"></script>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-YVBM251Y7B"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
 		function gtag() { dataLayer.push(arguments); }
 		gtag('js', new Date());
-		gtag('config', 'UA-141113114-1');
+
+		gtag('config', 'G-YVBM251Y7B');
 	</script>
 </head>
 
@@ -51,7 +52,7 @@
 				<td>W.H. Auden</td>
 				<td>British</td>
 				<td>Modernist</td>
-				<td>Love</td>
+				<td>Death</td>
 			</tr>
 			<tr>
 				<td><a href="https://www.poetryfoundation.org/poems/161869/the-more-loving-one-65a7f822258fd">The More
@@ -73,7 +74,7 @@
 				<td>Elizabeth Barrett Browning</td>
 				<td>British</td>
 				<td>Victorian</td>
-				<td>Love</td>
+				<td>Nature</td>
 			</tr>
 			<tr>
 				<td><a href="poetry/how-do-i-love-thee.html" style="color: #8F5E99">How Do I Love Thee?</a></td>
@@ -104,18 +105,19 @@
 				<td>Life</td>
 			</tr>
 			<tr>
-				<td>Differences of Opinion</td>
+				<td><a href="https://www.poetryfoundation.org/poetrymagazine/browse?volume=187&issue=5&page=24">Differences
+						of Opinion</a></td>
 				<td>Wendy Cope</td>
 				<td>British</td>
 				<td>Contemporary</td>
-				<td>Life</td>
+				<td>Conflict</td>
 			</tr>
 			<tr>
-				<td>Death Be Not Proud</td>
+				<td><a href="poetry/death-be-not-proud.html" style="color: #8F5E99">Death, be not proud</a></td>
 				<td>John Donne</td>
 				<td>British</td>
 				<td>Metaphysical</td>
-				<td>Time</td>
+				<td>Death</td>
 			</tr>
 			<tr>
 				<td>No Man is an Island</td>
@@ -279,7 +281,8 @@
 		recommend donating to the <a href="https://www.eff.org/">Electronic Frontier Foundation.</a> Or, you can enjoy
 		the satirical poem <a
 			href="file:///Users/violetsinn/Downloads/SUM11-1166_Poem_The_Law_of_Copyright_2011-06-07_EN.pdf"><i>The Law
-				of Copyright</i></a> by Wendy Cope, distributed by The International Confederation of Societies of Authors
+				of Copyright</i></a> by Wendy Cope, distributed by The International Confederation of Societies of
+		Authors
 		and Composers (CISAC) for free.</p>
 	<footer>
 		<a href="https://www.linkedin.com/in/vasinnarkar/" target="_blank">
