--- a/poetry/late-fragment.html
+++ b/poetry/late-fragment.html
@@ -1,59 +1,37 @@
 <html>
 
 <head>
-	<title>Violet Sinnarkar</title>
-	<link rel="stylesheet" type="text/css" href="../css/main.css">
-	<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-YVBM251Y7B"></script>
-	<script>
-		window.dataLayer = window.dataLayer || [];
-		function gtag() { dataLayer.push(arguments); }
-		gtag('js', new Date());
+    <title>Violet Sinnarkar</title>
+    <link rel="stylesheet" type="text/css" href="../css/main.css">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-YVBM251Y7B"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-		gtag('config', 'G-YVBM251Y7B');
-	</script>
+        gtag('config', 'G-YVBM251Y7B');
+    </script>
 </head>
 
 <body>
-	<h1>Violet Sinnarkar</h1>
-	<nav>
-		<ul>
-			<li><a href="../index.html" style="color: #8F5E99">Home</a></li>
-			<li><a href="../cv_20251005.pdf" style="color: #8F5E99">CV</a></li>
-			<li><a href="../poetry.html" style="color: #8F5E99">Poetry</a></li>
-			<li><a href="../blog.html" style="color: #8F5E99">Blog</a></li>
-		</ul>
-	</nav>
+    <h1>Violet Sinnarkar</h1>
+    <nav>
+        <ul>
+            <li><a href="../index.html" style="color: #8F5E99">Home</a></li>
+            <li><a href="../cv_20251005.pdf" style="color: #8F5E99">CV</a></li>
+            <li><a href="../poetry.html" style="color: #8F5E99">Poetry</a></li>
+            <li><a href="../blog.html" style="color: #8F5E99">Blog</a></li>
+        </ul>
+    </nav>
 
-	<body>
-		<h2> Late Fragment </h2>
-		<h3> By Raymond Carver </h3>
-        <p><img class="poem_vert_image" src="../photos/late-fragment.jpg"/>
+    <h2> Late Fragment </h2>
+    <h3> By Raymond Carver </h3>
+    <p><img class="poem_vert_image" src="../photos/late-fragment.jpg" />
 
-        <p> <b>Personal Notes</b>:</p>
-        <p> May 2025: A photo by <a href = "https://www.linkedin.com/in/beckpictures">Erik Lee Beck</a>, taken at Carver's grave in Port Angeles, WA. </p>
-	</body>
-	<footer>
-		<a href="https://www.linkedin.com/in/vasinnarkar/" target="_blank">
-			<div class="icon">
-				<object height=25px width=25px type="image/svg+xml" data="linkedin.svg">
-				</object>
-			</div>
-		</a>
-		<a href="https://twitter.com/violetsinn" target="_blank">
-			<div class="icon">
-				<object height=25px width=25px type="image/svg+xml" data="twitter.svg">
-				</object>
-			</div>
-		</a>
-		<a href="https://github.com/violetsinn" target="_blank">
-			<div class="icon">
-				<object height=25px width=25px type="image/svg+xml" data="github.svg">
-				</object>
-			</div>
-		</a>
-		<p><small>© Violet Sinnarkar 2019 | <a style="color: #8F5E99" href="credits.html">Credits</a></small></p>
-	</footer>
+    <p> <b>Personal Notes</b>:</p>
+    <p> May 2025: A photo by <a href="https://www.linkedin.com/in/beckpictures">Erik Lee Beck</a>, taken at Carver's
+        grave in Port Angeles, WA. </p>
 </body>
 
 </html>
