more john donne

--- a/poetry.html
+++ b/poetry.html
@@ -120,11 +120,18 @@
 				<td>Death</td>
 			</tr>
 			<tr>
-				<td>No Man is an Island</td>
+				<td><a href="poetry/no-man-is-an-island.html" style="color: #8F5E99"></a>No Man is an Island</td>
 				<td>John Donne</td>
 				<td>British</td>
 				<td>Metaphysical</td>
 				<td>Life</td>
+			</tr>
+						<tr>
+				<td><a href="poetry/the-sun-rising.html" style="color: #8F5E99"></a>The Sun Rising</td>
+				<td>John Donne</td>
+				<td>British</td>
+				<td>Metaphysical</td>
+				<td>Love</td>
 			</tr>
 			<tr>
 				<td>Desiderata</td>
@@ -275,7 +282,7 @@
 			</tr>
 		</tbody>
 	</table>
-
+	<br>
 	<p> Most of Auden's work will enter the public domain in 2044. Raymond Carver's <i>A New Path to the Waterfall</i>
 		will enter in 2059. If you would like to improve copyright law and policy in the United States, I would
 		recommend donating to the <a href="https://www.eff.org/">Electronic Frontier Foundation.</a> Or, you can enjoy
@@ -285,25 +292,7 @@
 		Authors
 		and Composers (CISAC) for free.</p>
 	<footer>
-		<a href="https://www.linkedin.com/in/vasinnarkar/" target="_blank">
-			<div class="icon">
-				<object height=25px width=25px type="image/svg+xml" data="linkedin.svg">
-				</object>
-			</div>
-		</a>
-		<a href="https://twitter.com/violetsinn" target="_blank">
-			<div class="icon">
-				<object height=25px width=25px type="image/svg+xml" data="twitter.svg">
-				</object>
-			</div>
-		</a>
-		<a href="https://github.com/violetsinn" target="_blank">
-			<div class="icon">
-				<object height=25px width=25px type="image/svg+xml" data="github.svg">
-				</object>
-			</div>
-		</a>
-		<p><small>© Violet Sinnarkar 2019 | <a style="color: #8F5E99" href="credits.html">Credits</a></small></p>
+		<p><small>© Violet Sinnarkar 2025 </small></p>
 	</footer>
 </body>
 
