more khalil gibran

--- a/poetry.html
+++ b/poetry.html
@@ -50,7 +50,7 @@
 			<tr>
 				<td><a href="https://thepoetryhour.com/poems/funeral-blues/">Funeral Blues</a></td>
 				<td>W.H. Auden</td>
-				<td>British</td>
+				<td>English</td>
 				<td>Modernist</td>
 				<td>Death</td>
 			</tr>
@@ -58,7 +58,7 @@
 				<td><a href="https://www.poetryfoundation.org/poems/161869/the-more-loving-one-65a7f822258fd">The More
 						Loving One</a></td>
 				<td>W.H. Auden</td>
-				<td>British</td>
+				<td>English</td>
 				<td>Modernist</td>
 				<td>Love</td>
 			</tr>
@@ -72,21 +72,21 @@
 			<tr>
 				<td><a href="poetry/change-on-change.html" style="color: #8F5E99">Change on Change</a></td>
 				<td>Elizabeth Barrett Browning</td>
-				<td>British</td>
+				<td>English</td>
 				<td>Victorian</td>
 				<td>Nature</td>
 			</tr>
 			<tr>
 				<td><a href="poetry/how-do-i-love-thee.html" style="color: #8F5E99">How Do I Love Thee?</a></td>
 				<td>Elizabeth Barrett Browning</td>
-				<td>British</td>
+				<td>English</td>
 				<td>Victorian</td>
 				<td>Love</td>
 			</tr>
 			<tr>
 				<td><a href="poetry/epitaph-to-a-dog.html" style="color: #8F5E99">Epitaph to a Dog</a></td>
 				<td>Lord Byron</td>
-				<td>British</td>
+				<td>English</td>
 				<td>Romantic</td>
 				<td>Love</td>
 			</tr>
@@ -108,44 +108,58 @@
 				<td><a href="https://www.poetryfoundation.org/poetrymagazine/browse?volume=187&issue=5&page=24">Differences
 						of Opinion</a></td>
 				<td>Wendy Cope</td>
-				<td>British</td>
+				<td>English</td>
 				<td>Contemporary</td>
-				<td>Conflict</td>
+				<td>Relationships</td>
 			</tr>
 			<tr>
 				<td><a href="poetry/death-be-not-proud.html" style="color: #8F5E99">Death, be not proud</a></td>
 				<td>John Donne</td>
-				<td>British</td>
+				<td>English</td>
 				<td>Metaphysical</td>
 				<td>Death</td>
 			</tr>
 			<tr>
 				<td><a href="poetry/no-man-is-an-island.html" style="color: #8F5E99"></a>No Man is an Island</td>
 				<td>John Donne</td>
-				<td>British</td>
+				<td>English</td>
 				<td>Metaphysical</td>
 				<td>Life</td>
 			</tr>
 						<tr>
-				<td><a href="poetry/the-sun-rising.html" style="color: #8F5E99"></a>The Sun Rising</td>
+				<td><a href="poetry/the-sun-rising.html" style="color: #8F5E99">The Sun Rising</a></td>
 				<td>John Donne</td>
-				<td>British</td>
+				<td>English</td>
 				<td>Metaphysical</td>
 				<td>Love</td>
 			</tr>
 			<tr>
-				<td>Desiderata</td>
+				<td><a href="poetry/desiderata.html" style="color: #8F5E99">Desiderata</a></td>
 				<td>Max Ehrmann</td>
 				<td>American</td>
 				<td>Contemporary</td>
 				<td>Life</td>
 			</tr>
 			<tr>
-				<td>Half Life</td>
+				<td><a href="poetry/on-love.html" style="color: #8F5E99">On Marriage</a></td>
 				<td>Khalil Gibran</td>
-				<td>Lebanese</td>
+				<td>Lebanese-American</td>
 				<td>Modernist</td>
-				<td>Life</td>
+				<td>Relationships</td>
+			</tr>
+			<tr>
+				<td><a href="poetry/on-marriage.html" style="color: #8F5E99">On Marriage</a></td>
+				<td>Khalil Gibran</td>
+				<td>Lebanese-American</td>
+				<td>Modernist</td>
+				<td>Relationships</td>
+			</tr>
+						<tr>
+				<td><a href="poetry/on-pleasure.html" style="color: #8F5E99">On Pleasure</a></td>
+				<td>Khalil Gibran</td>
+				<td>Lebanese-American</td>
+				<td>Modernist</td>
+				<td>Love</td>
 			</tr>
 			<tr>
 				<td>The New Colossus</td>
