--- a/poetry/death-be-not-proud.html
+++ b/poetry/death-be-not-proud.html
@@ -21,7 +21,7 @@
             <li><a href="../index.html" style="color: #8F5E99">Home</a></li>
             <li><a href="../cv_20251005.pdf" style="color: #8F5E99">CV</a></li>
             <li><a href="../poetry.html" style="color: #8F5E99">Poetry</a></li>
-            <li><a href="../blog.html" style="color: #8F5E99">Blog</a></li>
+            <li><a href="../blog.html" style="color: #ce98d8">Blog</a></li>
         </ul>
     </nav>
 
