--- a/poetry.html
+++ b/poetry.html
@@ -126,7 +126,7 @@
 				<td>Metaphysical</td>
 				<td>Life</td>
 			</tr>
-						<tr>
+			<tr>
 				<td><a href="poetry/the-sun-rising.html" style="color: #8F5E99">The Sun Rising</a></td>
 				<td>John Donne</td>
 				<td>English</td>
@@ -154,7 +154,7 @@
 				<td>Modernist</td>
 				<td>Relationships</td>
 			</tr>
-						<tr>
+			<tr>
 				<td><a href="poetry/on-pleasure.html" style="color: #8F5E99">On Pleasure</a></td>
 				<td>Khalil Gibran</td>
 				<td>Lebanese-American</td>
@@ -162,14 +162,14 @@
 				<td>Love</td>
 			</tr>
 			<tr>
-				<td>The New Colossus</td>
+				<td><a href="poetry/the-new-colossus.html" style="color: #8F5E99">The New Colossus</a></td>
 				<td>Emma Lazarus</td>
 				<td>American</td>
-				<td>Late 19th Century</td>
+				<td>Romantic</td>
 				<td>Freedom</td>
 			</tr>
 			<tr>
-				<td>To His Coy Mistress</td>
+				<td><a href="poetry/to-his-coy-mistress.html" style="color: #8F5E99">To His Coy Mistress</a></td>
 				<td>Andrew Marvell</td>
 				<td>British</td>
 				<td>Metaphysical</td>
@@ -190,11 +190,19 @@
 				<td>Love</td>
 			</tr>
 			<tr>
-				<td>Ode to Numbers</td>
+				<td><a href="https://www.poetryfoundation.org/poems/49236/one-hundred-love-sonnets-xvii">Soneto XVII</a>
+				</td>
 				<td>Pablo Neruda</td>
 				<td>Chilean</td>
 				<td>Contemporary</td>
-				<td>Life</td>
+				<td>Love</td>
+			</tr>
+			<tr>
+				<td>Next Time</td>
+				<td>Mary Oliver</td>
+				<td>American</td>
+				<td>Contemporary</td>
+				<td>Love</td>
 			</tr>
 			<tr>
 				<td>The Uses of Sorrow</td>
@@ -203,8 +211,9 @@
 				<td>Contemporary</td>
 				<td>Love</td>
 			</tr>
+			</tr>
 			<tr>
-				<td>Next Time</td>
+				<td>Wild Geese</td>
 				<td>Mary Oliver</td>
 				<td>American</td>
 				<td>Contemporary</td>
