--- a/poetry.html
+++ b/poetry.html
@@ -211,7 +211,6 @@
 				<td>Contemporary</td>
 				<td>Love</td>
 			</tr>
-			</tr>
 			<tr>
 				<td>Wild Geese</td>
 				<td>Mary Oliver</td>
@@ -220,21 +219,42 @@
 				<td>Love</td>
 			</tr>
 			<tr>
-				<td>The Lady's Reward</td>
+				<td><a href = "poetry/i-know-i-have-been-happiest.html">I Know I Have Been Happiest</a></td>
 				<td>Dorothy Parker</td>
 				<td>American</td>
 				<td>Contemporary</td>
 				<td>Love</td>
 			</tr>
 			<tr>
-				<td>Somebody's Song</td>
+				<td><a href = "poetry/purposely-ungrammatical-love-song.html">Purposely Ungrammatical Love Song</a></td>
+				<td>Dorothy Parker</td>
+				<td>American</td>
+				<td>Contemporary</td>
+				<td>Love</td>
+			</tr>
+						<tr>
+				<td><a href = "poetry/recurrence.html">Recurrence</a></td>
 				<td>Dorothy Parker</td>
 				<td>American</td>
 				<td>Contemporary</td>
 				<td>Love</td>
 			</tr>
 			<tr>
-				<td>Purposely Ungrammatical Love Song</td>
+				<td><a href = "poetry/somebodys-song.html">Somebody's Song</a></td>
+				<td>Dorothy Parker</td>
+				<td>American</td>
+				<td>Contemporary</td>
+				<td>Love</td>
+			</tr>
+						<tr>
+				<td><a href = "poetry/story-of-mrs-w.html">Story of Mrs. W</a></td>
+				<td>Dorothy Parker</td>
+				<td>American</td>
+				<td>Contemporary</td>
+				<td>Love</td>
+			</tr>
+						<tr>
+				<td><a href = "poetry/the-ladys-reward.html">The Lady's Reward</a></td>
 				<td>Dorothy Parker</td>
 				<td>American</td>
 				<td>Contemporary</td>
