--- a/poetry/epitaph-to-a-dog.html
+++ b/poetry/epitaph-to-a-dog.html
@@ -57,16 +57,16 @@
 		</p>
 
 		<p> <b>Personal Notes</b>:</p>
-        <p> May 2018: In memory of Cocoa </p>
+        <p> May 2018: In memory of Coco </p>
 
         <p><img class="poem_hori_image" src="../photos/cocoa/cocoa-brothers.JPG"/></p>
-        <p class = "image-caption">Cocoa with his brother Spot, undated.</p>
+        <p class = "image-caption">Coco with his brother Spot, undated.</p>
         <br>
         <p><img class="poem_vert_image" src="../photos/cocoa/cocoa-berkeley.jpeg"/></p>
-        <p class = "image-caption">Cocoa in May 2016, when I was accepted to Berkeley.</p>
+        <p class = "image-caption">Coco in May 2016, when I was accepted to Berkeley.</p>
         <br>
         <img class="poem_hori_image" src="../photos/cocoa/cocoa-thanksgiving.JPG"/></p>
-        <p class = "image-caption">Cocoa on Thanksgiving 2017.</p>
+        <p class = "image-caption">Coco on Thanksgiving 2017.</p>
 	
 </body>
 
