more dorothy parker

--- a/poetry.html
+++ b/poetry.html
@@ -219,42 +219,49 @@
 				<td>Love</td>
 			</tr>
 			<tr>
-				<td><a href = "poetry/i-know-i-have-been-happiest.html">I Know I Have Been Happiest</a></td>
+				<td><a href = "poetry/i-know-i-have-been-happiest.html" style="color: #8F5E99">I Know I Have Been Happiest</a></td>
+				<td>Dorothy Parker</td>
+				<td>American</td>
+				<td>Contemporary</td>
+				<td>Love</td>
+			</tr>
+						<tr>
+				<td><a href = "poetry/i-shall-come-back.html" style="color: #8F5E99">I Shall Come Back</a></td>
 				<td>Dorothy Parker</td>
 				<td>American</td>
 				<td>Contemporary</td>
 				<td>Love</td>
 			</tr>
 			<tr>
-				<td><a href = "poetry/purposely-ungrammatical-love-song.html">Purposely Ungrammatical Love Song</a></td>
+				<td><a href = "poetry/purposely-ungrammatical-love-song.html" style="color: #8F5E99">Purposely Ungrammatical Love Song</a></td>
 				<td>Dorothy Parker</td>
 				<td>American</td>
 				<td>Contemporary</td>
 				<td>Love</td>
 			</tr>
 						<tr>
-				<td><a href = "poetry/recurrence.html">Recurrence</a></td>
+				<td><a href = "poetry/recurrence.html" style="color: #8F5E99">Recurrence</a></td>
 				<td>Dorothy Parker</td>
 				<td>American</td>
 				<td>Contemporary</td>
 				<td>Love</td>
 			</tr>
 			<tr>
-				<td><a href = "poetry/somebodys-song.html">Somebody's Song</a></td>
+				<td><a href = "poetry/somebodys-song.html" style="color: #8F5E99">Somebody's Song</a></td>
 				<td>Dorothy Parker</td>
 				<td>American</td>
 				<td>Contemporary</td>
 				<td>Love</td>
 			</tr>
 						<tr>
-				<td><a href = "poetry/story-of-mrs-w.html">Story of Mrs. W</a></td>
+				<td><a href = "poetry/story-of-mrs-w.html" style="color: #8F5E99">Story of Mrs. W</a></td>
 				<td>Dorothy Parker</td>
 				<td>American</td>
 				<td>Contemporary</td>
 				<td>Love</td>
 			</tr>
 						<tr>
-				<td><a href = "poetry/the-ladys-reward.html">The Lady's Reward</a></td>
+				<td><a href = "poetry/the-ladys-reward.html" style="color: #8F5E99">The Lady's Reward</a></td>
 				<td>Dorothy Parker</td>
 				<td>American</td>
 				<td>Contemporary</td>
